--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
   <groupId>CommentedConfiguration</groupId>
   <artifactId>CommentedConfiguration</artifactId>
   <version>1.0.0</version>
+  
+  <properties>
+    <java.version>1.8</java.version>
+    <project.bukkitAPIVersion>1.14</project.bukkitAPIVersion>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
   <repositories>
     <repository>
